0.0:  Various abortive attempts

0.1:  First alpha version with Hmisc support

0.2:  First reasonably complete release

0.3:  Renamed from "tabular" to "tables", put on R-forge

0.4:  Added All(), Literal() and RowFactor()
      Added table_options() and booktabs() for booktabs support
      Gave different defaults for row label justification and data justification
      Suppress page breaks in RowFactor().
      Allow options to be set temporarily in latex() call.